--- a/source/widget/homework/homework.less
+++ b/source/widget/homework/homework.less
@@ -43,11 +43,12 @@
           .popover{
              max-width: 600px;
              .homework-remid-box{
-                width: 193px;
+                width: 200px;
                 .font-family("Microsoft YaHei");
                 .font-size(14px);
                 line-height: 60px;
-                color: #666; 
+                color: #000; 
+                text-align: center;
              }
           }
           p{
@@ -377,7 +378,7 @@
             .font-size(14px);
             font-weight: normal;
         }
-        .homework-audio{
+        .homework-audio-box{
             float: left;
             height: 36px;
             line-height: 36px;
