完善信息弹框更改

--- a/source/static/css/default.css
+++ b/source/static/css/default.css
@@ -257,6 +257,8 @@ em {
   background: url(../../widget/Public.Module/img/page-down-default.png) 0 no-repeat;
 }
 .row-page-turn .page-turn-box {
+  float: left;
+  width: 1100px;
   overflow: hidden;
 }
 .row-page-turn .page-turn-box .course-small-list {
