--- a/source/widget/perfect-information/perfect-information.less
+++ b/source/widget/perfect-information/perfect-information.less
@@ -1,7 +1,7 @@
 body{
 	background: rgba(0,0,0,0.6)
 }
-.infor-cardModal{
+.infor-Modal{
 	.modal-dialog{
 		width: 530px;
 		height: 520px;
@@ -14,7 +14,7 @@ body{
 		border-bottom: none;
 	}
 }
-.FormList-cardModal{
+.FormList-Modal{
 	.modal-content{
 		width: 530px;
 		height: 520px;
