--- a/source/widget/UserHome.courses/courseStudycenter.css
+++ b/source/widget/UserHome.courses/courseStudycenter.css
@@ -174,6 +174,9 @@ body {
   float: right;
   margin-right: 10px;
 }
+.courseList .courseList-body .course-title .change-course {
+  color: #e74c3c;
+}
 .courseList .courseList-body .title-more {
   margin-top: 38px;
 }
@@ -443,13 +446,15 @@ table tr:nth-of-type(2n) {
   color: #1e89e0;
 }
 .load-btn {
-  padding: 0px 22px;
-  line-height: 33px;
+  padding: 0px 15px;
+  line-height: 34px;
   font-size: 14px;
-  background: #37bc9b;
-  color: #fff;
   border-radius: 2px;
   margin-bottom: 0;
+  margin-right: 12px;
+}
+.load-btn-none {
+  color: #999;
 }
 .bom-delay {
   padding: 30px 40px;
@@ -504,6 +509,10 @@ table tr:nth-of-type(2n) {
   font-size: 18px;
   font-family: 'Microsoft YaHei';
   line-height: 34px;
+}
+.courselayout-list .courseList-title p span {
+  color: #e74c3c;
+  margin-left: 5px;
 }
 .courselayout-list .course-table {
   background: #fff;
