金币商城 兑换失败提示
金币商城 兑换失败提示

--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -94,6 +94,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .modal-body{overflow: hidden;}
 .red-card-tip div,.present-card-tip div{padding:0;height: 30px;text-align: center;}
 .red-card-tip div span,.present-card-tip div span{height: 30px;line-height: 30px;color: #333;font-weight: bold;}
+.alertImg{margin-right: 10px;margin-bottom: 3px;}
 
 
 
