--- a/source/widget/Public.Module/glory.less
+++ b/source/widget/Public.Module/glory.less
@@ -14,6 +14,9 @@
 		padding: 0 10px;
 		cursor: pointer;
 	}
+	.screen-look-grades{
+		float: right;
+	}
 	li.popular-rank{
 		padding: 0 20px;
 		border-right: 1px solid @borderColor;
