学习中心样式更改

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -164,6 +164,8 @@ body{
 			}
 			.change-course{
 				color: #e74c3c;
+				font-size: 14px;
+				margin-left: 10px;
 			}
 		}
 		.title-more{
@@ -525,7 +527,8 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 			line-height: 34px;
 			span{
 				color: #e74c3c;
-				margin-left: 5px;
+				margin-left: 10px;
+				font-size: 14px;
 			}
 		}
 	}
