调整样式和图片

--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -295,10 +295,10 @@ em {
         cursor: pointer;
         text-indent: -9999em;
         &.page-up {
-            background: url(../../widget/Public.Module/img/page-up-default.png) 0 no-repeat;
+            background: url(../../static/img/page-up-default.png?__inline) 0 no-repeat;
         }
         &.page-down {
-            background: url(../../widget/Public.Module/img/page-down-default.png) 0 no-repeat;
+            background: url(../../static/img/page-down-default.png?__inline) 0 no-repeat;
         }
         // &.page-up-disable {切到头以后的禁用按钮
         //         background: url(../../widget/Public.Module/img/page-up-disable.png) 0 no-repeat;
