--- a/source/widget/UM.Nav/nav.css
+++ b/source/widget/UM.Nav/nav.css
@@ -26,6 +26,7 @@
 }
 .user-manage-body .panel {
   border-color: #FFF;
+  margin-bottom: 20px;
 }
 .user-manage-body .panel .panel-heading {
   height: 50px;
