--- a/source/static/css/default.css
+++ b/source/static/css/default.css
@@ -1,269 +1,1 @@
-html,
-body {
-  font-family: "微软雅黑", Helvetica, 'Source Sans Pro', sans-serif;
-}
-ul,
-ol {
-  margin: 0;
-  padding-left: 0;
-  list-style: none;
-}
-em {
-  font-style: normal;
-  padding: 0 .2rem;
-}
-.label {
-  font-weight: 500;
-}
-.icon.icon-arrow-right {
-  width: 4px;
-  height: 14px;
-  font: 400 9px/14px consolas;
-  padding-top: 4px;
-}
-.header-layer {
-  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  z-index: 9;
-}
-.container {
-  padding: 0;
-}
-.top.m10 {
-  margin-top: 10px;
-}
-.top.m20 {
-  margin-top: 20px;
-}
-.top.m30 {
-  margin-top: 30px;
-}
-.bottom.m10 {
-  margin-bottom: 10px;
-}
-.bottom.m20 {
-  margin-bottom: 20px;
-}
-.bottom.m30 {
-  margin-bottom: 30px;
-}
-.wrap.w930 {
-  width: 930px !important;
-}
-.wrap.w120 {
-  width: 130px !important;
-}
-.wrap.h630 {
-  min-height: 630px;
-}
-.hiding {
-  display: none;
-}
-.wrap-body {
-  width: 1050px !important;
-  padding-left: 0;
-  padding-right: 0;
-}
-.wrap-body.wrap-mall {
-  width: 940px !important;
-}
-.wrap-side {
-  width: 130px;
-}
-.wrap-side.wrap-mall {
-  width: 240px !important;
-}
-.alert-warning {
-  border-color: transparent;
-  background: #ffdd87;
-  color: #333;
-  font-size: 14px;
-  border-radius: 5px;
-}
-.alert-warning i {
-  color: #FFF;
-  font-size: 20px;
-  padding-right: 10px;
-  float: left;
-}
-.nav-tabs {
-  border-bottom: 1px solid #3bafda;
-  font-size: 14px;
-  margin-bottom: 20px;
-}
-.nav-tabs li {
-  margin-bottom: 0;
-}
-.nav-tabs li a {
-  padding: 5px 15px;
-}
-.nav-tabs li a.btn {
-  border-radius: 4px;
-}
-.nav-tabs li a:hover,
-.nav-tabs li a:focus {
-  background-color: transparent;
-  border-color: transparent;
-}
-.nav-tabs li a:hover.btn-danger,
-.nav-tabs li a:focus.btn-danger {
-  background-color: #cf4436;
-}
-.nav-tabs li.active a,
-.nav-tabs li.active a:hover,
-.nav-tabs li.active a:focus {
-  color: #FFF;
-  background-color: #3bafda;
-  border-color: transparent;
-}
-.panel.panel-default {
-  margin-bottom: 0;
-  box-shadow: none;
-}
-.panel.panel-default .panel-heading {
-  border-color: #EFEFEF;
-}
-#module-breadcrumb {
-  background-color: transparent;
-}
-#module-breadcrumb > .active {
-  color: #333;
-}
-#module-breadcrumb > li + li:before {
-  content: ">";
-  padding: 0 2px;
-  font-size: 14px;
-  font-family: "Microsoft YaHei";
-}
-.pd0 {
-  padding: 0;
-}
-.pd5 {
-  padding: 0 5px;
-}
-.pull-right {
-  padding: 0;
-}
-.panel-header {
-  height: 42px;
-  line-height: 42px;
-  font-size: 16px;
-}
-/*首页公用标题样式和一些重构样式*/
-.grade-course-title {
-  height: 55px;
-  overflow: hidden;
-}
-.grade-course-title div {
-  height: 35px;
-  line-height: 35px;
-  border-bottom: 1px solid #3bafda;
-  margin-bottom: 20px;
-}
-.grade-course-title h6 {
-  position: relative;
-  float: left;
-  width: 90px;
-  height: 35px;
-  background: #fff;
-  top: 9px;
-  z-index: 1;
-  font-size: 18px;
-  color: #999;
-}
-.grade-course-title h6.live-title {
-  width: 110px;
-}
-.grade-course-title a.more {
-  float: right;
-  font-size: 14px;
-}
-.grade-course-title ul.live-list-tabs {
-  float: right;
-  margin-right: 5px;
-  overflow: hidden;
-}
-.grade-course-title ul.live-list-tabs li {
-  float: left;
-  display: inline;
-  margin-right: 5px;
-}
-.grade-course-title ul.live-list-tabs li i.fa {
-  cursor: pointer;
-  color: #999;
-}
-.grade-course-title ul.live-list-tabs li.active i.fa {
-  color: #3bafda;
-}
-.grade-course-title ul.grade-list {
-  overflow: hidden;
-  padding-left: 161px;
-}
-.grade-course-title ul.grade-list li {
-  float: left;
-  display: inline;
-  width: 50px;
-  height: 34px;
-  text-align: center;
-  font-size: 14px;
-  margin-right: 15px;
-  cursor: pointer;
-}
-.grade-course-title ul.grade-list li.active {
-  border-bottom: 2px solid #3bafda;
-  color: #3bafda;
-}
-.wrap-side-right .fresh-list {
-  padding: 12px 0;
-}
-.wrap-side-right .fresh-list .fresh-detail .fresh-text .fresh-info {
-  height: 58px;
-  line-height: 180%;
-  overflow: hidden;
-}
-.wrap-center {
-  width: 690px;
-  margin-left: 10px;
-}
-.wrap-center .panel-body {
-  width: 110%;
-}
-.wrap-center .course-small-list {
-  float: left;
-  display: inline;
-  margin: 0 35px 20px 0;
-}
-.row-page-turn {
-  padding: 0 5px;
-  margin-bottom: 20px;
-  overflow: hidden;
-}
-.row-page-turn .live-content-action {
-  width: 110%;
-  overflow: hidden;
-}
-.row-page-turn .live-content-action .live-teacher-photo {
-  margin-top: 0;
-}
-.row-page-turn .page-turn {
-  width: 45px;
-  height: 115px;
-  cursor: pointer;
-  text-indent: -9999em;
-}
-.row-page-turn .page-turn.page-up {
-  background: url(../../widget/Public.Module/img/page-up-default.png) 0 no-repeat;
-}
-.row-page-turn .page-turn.page-down {
-  background: url(../../widget/Public.Module/img/page-down-default.png) 0 no-repeat;
-}
-.row-page-turn .page-turn-box {
-  float: left;
-  width: 1100px;
-  overflow: hidden;
-}
-.row-page-turn .page-turn-box .course-small-list {
-  float: left;
-  display: inline;
-  margin: 0 36px 0 15px;
-}
-/*首页公用标题样式和一些重构样式 结束位置*/
+html,body{font-family:"微软雅黑",Helvetica,'Source Sans Pro',sans-serif}ul,ol{margin:0;padding-left:0;list-style:none}em{font-style:normal;padding:0 .2rem}.label{font-weight:500}.icon.icon-arrow-right{width:4px;height:14px;font:400 9px/14px consolas;padding-top:4px}.header-layer{box-shadow:0 2px 10px 0 rgba(0,0,0,0.12);z-index:9}.container{padding:0}.top.m10{margin-top:10px}.top.m20{margin-top:20px}.top.m30{margin-top:30px}.bottom.m10{margin-bottom:10px}.bottom.m20{margin-bottom:20px}.bottom.m30{margin-bottom:30px}.wrap.w930{width:930px !important}.wrap.w120{width:130px !important}.wrap.h630{min-height:630px}.hiding{display:none}.wrap-body{width:1050px !important;padding-left:0;padding-right:0}.wrap-body.wrap-mall{width:940px !important}.wrap-side{width:130px}.wrap-side.wrap-mall{width:240px !important}.alert-warning{border-color:transparent;background:#ffdd87;color:#333;font-size:14px;border-radius:5px}.alert-warning i{color:#fff;font-size:20px;padding-right:10px;float:left}.nav-tabs{border-bottom:1px solid #3bafda;font-size:14px;margin-bottom:20px}.nav-tabs li{margin-bottom:0}.nav-tabs li a{padding:5px 15px}.nav-tabs li a.btn{border-radius:4px}.nav-tabs li a:hover,.nav-tabs li a:focus{background-color:transparent;border-color:transparent}.nav-tabs li a:hover.btn-danger,.nav-tabs li a:focus.btn-danger{background-color:#cf4436}.nav-tabs li.active a,.nav-tabs li.active a:hover,.nav-tabs li.active a:focus{color:#fff;background-color:#3bafda;border-color:transparent}.panel.panel-default{margin-bottom:0;box-shadow:none}.panel.panel-default .panel-heading{border-color:#efefef}#module-breadcrumb{background-color:transparent}#module-breadcrumb>.active{color:#333}#module-breadcrumb>li+li:before{content:">";padding:0 2px;font-size:14px;font-family:"Microsoft YaHei"}.pd0{padding:0}.pd5{padding:0 5px}.pull-right{padding:0}.panel-header{height:42px;line-height:42px;font-size:16px}.grade-course-title{height:55px;overflow:hidden}.grade-course-title div{height:35px;line-height:35px;border-bottom:1px solid #3bafda;margin-bottom:20px}.grade-course-title h6{position:relative;float:left;width:90px;height:35px;background:#fff;top:9px;z-index:1;font-size:18px;color:#999}.grade-course-title h6.live-title{width:110px}.grade-course-title a.more{float:right;font-size:14px}.grade-course-title ul.live-list-tabs{float:right;margin-right:5px;overflow:hidden}.grade-course-title ul.live-list-tabs li{float:left;display:inline;margin-right:5px}.grade-course-title ul.live-list-tabs li i.fa{cursor:pointer;color:#999}.grade-course-title ul.live-list-tabs li.active i.fa{color:#3bafda}.grade-course-title ul.grade-list{overflow:hidden;padding-left:161px}.grade-course-title ul.grade-list li{float:left;display:inline;width:50px;height:34px;text-align:center;font-size:14px;margin-right:15px;cursor:pointer}.grade-course-title ul.grade-list li.active{border-bottom:2px solid #3bafda;color:#3bafda}.wrap-side-right .fresh-list{padding:12px 0}.wrap-side-right .fresh-list .fresh-detail .fresh-text .fresh-info{height:58px;line-height:180%;overflow:hidden}.wrap-center{width:690px;margin-left:10px}.wrap-center .panel-body{width:110%}.wrap-center .course-small-list{float:left;display:inline;margin:0 35px 20px 0}.row-page-turn{padding:0 5px;margin-bottom:20px;overflow:hidden}.row-page-turn .live-content-action{width:110%;overflow:hidden}.row-page-turn .live-content-action .live-teacher-photo{margin-top:0}.row-page-turn .page-turn{width:45px;height:115px;cursor:pointer;text-indent:-9999em}.row-page-turn .page-turn.page-up{background:url(../../static/img/page-up-default.png?__inline) 0 no-repeat}.row-page-turn .page-turn.page-down{background:url(../../static/img/page-down-default.png?__inline) 0 no-repeat}.row-page-turn .page-turn-box{float:left;width:1100px;overflow:hidden}.row-page-turn .page-turn-box .course-small-list{float:left;display:inline;margin:0 36px 0 15px}
