--- a/source/widget/UM.Nav/nav.less
+++ b/source/widget/UM.Nav/nav.less
@@ -28,7 +28,7 @@
         width: 1050px;
         .panel {
             border-color: #FFF;
-            
+            margin-bottom: 20px;
             .panel-heading {
                 height: 50px;
                 line-height: 50px;
