--- a/source/widget/Public.Dynamic/fresh.less
+++ b/source/widget/Public.Dynamic/fresh.less
@@ -581,6 +581,7 @@
                       top:0;
                       bottom: 0;
                       opacity: 0.7;
+                      filter:alpha(opacity=70);
                       position: absolute;
                       z-index: 10;
                   }
@@ -914,6 +915,7 @@
            margin: 0;
            padding: 0;
            opacity: 0;
+           filter:alpha(opacity=0);
            cursor: pointer;
        }
    }
