Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/Public.Dynamic/fresh.less
+++ b/source/widget/Public.Dynamic/fresh.less
@@ -861,6 +861,9 @@
            img{
               width: 100%;
            }
+           #fresh-send-preview-img{
+              filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(sizingMethod=image);
+           }
        }
    }
    .fresh-send-form{
