--- a/source/widget/UM.head.photo/head.photo.css
+++ b/source/widget/UM.head.photo/head.photo.css
@@ -63,7 +63,37 @@
   margin-bottom: 20px;
   background-color: #eee;
 }
-.hp-content .hp-box-left .hp-local .hl-box #preview #imghead {
+.hp-content .hp-box-left .hp-local .hl-box #preview {
+  display: table-cell !important;
+  display: block;
+  width: 299px;
+  height: 299px;
+  overflow: hidden;
+  text-align: center;
+  position: static !important;
+  position: relative;
+  vertical-align: middle;
+  _font-size: 0;
+}
+.hp-content .hp-box-left .hp-local .hl-box #preview span {
+  display: table-cell !important;
+  display: block;
+  margin: 0;
+  position: static !important;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.hp-content .hp-box-left .hp-local .hl-box #preview span #imghead {
+  position: static !important;
+  position: relative;
+  top: auto !important;
+  top: -50%;
+  left: auto !important;
+  left: -50%;
   max-width: 400px;
   max-height: 340px;
 }
@@ -104,10 +134,6 @@
   font-family: "SimSun";
   font-size: 12px;
   color: #666;
-}
-.hp-content .hp-box-left .hp-local .btn_up .btn_loadFile {
-  display: none;
-  float: right;
 }
 .hp-content .hp-box-left .hp-local #loadFile {
   display: none;
