--- a/source/widget/UM.third.bind/third.bind.css
+++ b/source/widget/UM.third.bind/third.bind.css
@@ -18,7 +18,7 @@
 .tb-content ul li h5 {
   float: left;
   display: inline-block;
-  width: 18%;
+  width: 20%;
   min-width: 115px;
   height: 45px;
   margin-left: 15px;
@@ -35,7 +35,7 @@
 }
 .tb-content ul li span {
   float: left;
-  width: 10%;
+  width: 15%;
   min-width: 50px;
   margin-top: 20px;
 }
@@ -47,18 +47,13 @@
   font-size: 14px;
   color: #37bd9c;
 }
-.tb-content ul .bounded .app-user {
-  float: left;
-  min-width: 115px;
-  margin-top: 11px;
-  font-size: 12px;
-  color: #333;
+.tb-content ul .bounded p {
+  display: inline-block;
+  margin-top: 20px;
 }
-.tb-content ul .bounded .app-user img {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  margin-right: 10px;
+.tb-content ul .bounded p .app-user {
+  float: none;
+  font-size: 12px;
 }
 .tb-content ul .bounded a {
   float: right;
