Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/UserHome.homework/homework.less
+++ b/source/widget/UserHome.homework/homework.less
@@ -195,7 +195,6 @@
                         cursor: pointer;
                         text-align: center;
                         box-sizing: content-box;
-                        overflow: hidden;
                         .homework-MaskLayer{
                             position: absolute;
                             left: 0;
@@ -238,6 +237,10 @@
                             width: auto;
                             height: auto;
                             cursor: pointer;
+                            &.homework-Feedback-small-img{
+                                width: 100%;
+                                height: 100%;
+                            }
                         }
                     }
               }
