--- a/source/widget/UM.Basic.information/basic-information.less
+++ b/source/widget/UM.Basic.information/basic-information.less
@@ -2,9 +2,25 @@
     width: 880px;
     height: 100%;
     overflow: hidden;
-    margin: 20px 0 30px 100px;
+    margin: 0 0 30px 100px;
     .bi-left{
         float: left;
+        position: relative;
+        margin-top: 40px;
+        .message-error{
+            display: none;
+            position: absolute;
+            top: -40px;
+            width: 325px;
+            border: 1px solid #e74c3c; 
+            background-color: #fef6f5;
+            span{
+                display: inline-block;
+                padding: 6px 0 6px 30px;
+                color: #e74c3c;
+                background: url("img/warning.png") 5px 4px no-repeat;
+            }
+        }
         div{
             position: relative;
             font-size: 12px;
@@ -93,6 +109,7 @@
         float: right;
         width: 295px;
         height: 140px;
+        margin-top: 40px;
         background: url('img/basic-bg.png') no-repeat;
         span{
             display: inline-block;
