--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -61,10 +61,8 @@
             .message-error{
                 display: none;
                 position: absolute;
-                top: -40px;
+                bottom: -35px;
                 width: 325px;
-                border: 1px solid #e74c3c; 
-                background-color: #fef6f5;
                 span{
                     display: inline-block;
                     padding: 6px 0 6px 30px;
@@ -166,6 +164,8 @@
             }
         }
         .btn-info{
+            position: absolute;
+            bottom: -70px;
             width: 100px;
             font-size: 14px; 
         }
