--- a/source/widget/UserHome.wrongQues/error_question.less
+++ b/source/widget/UserHome.wrongQues/error_question.less
@@ -17,6 +17,7 @@
 //  font-size: 10px;
 //  color:rgb(51,51,51);
 //}
+
 p{
   font-size: @Nfont-size;
   line-height: 1;
@@ -26,8 +27,27 @@ div{
   padding:0;
   margin:0;
 }
-.columns{
-  padding:0;
+
+.wrongQuest{
+  .selector{
+    background-color: rgb(249,249,249);
+    margin-right: 5px;
+    width: 90px;
+    height: 30px;
+    margin-bottom: 10px;
+    text-align: center;
+    line-height: 30px;
+    border-radius: 2px;
+    cursor: pointer;
+  }
+  
+  .nav-tabs{
+    margin-bottom: 10px;
+  } 
+}
+
+.choiceHide{
+  margin-bottom: 2rem;
 }
 
 /*错误题目css(start)*/
@@ -42,9 +62,8 @@ div{
   padding: 0;
   font-size: 1.4rem;
   width: 100%;
-  &{
-    margin-top: 2rem;  
-  }
+  margin-bottom: 2rem;  
+  
   &:last-child{
   	margin-bottom: 40px;
   }
@@ -68,6 +87,12 @@ div{
     font-size: @Sfont-size;
     margin: 1.4rem 0 1.2rem 0;
     color:rgb(153,153,153);
+  }
+  .que-head-href{
+    color:rgb(59,175,218);
+    &:hover{
+      text-decoration: underline;
+    }
   }
 }
 
@@ -172,255 +197,7 @@ div{
 }
 /* 错误题目css(end) */
 
-/* 链接浮窗css(start) */
-.links{
-  .alert-box{
-    margin-bottom: 0;
-    padding: 0;
-    text-align: center;
-    width: 6rem;
-    height: 7.2rem;
-    font-size:@Nfont-size;
-    border:none;
-    background-color: rgb(59,175,218);
-    transition: all 0.5s ease-in-out;
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    .pict-tip {
-      margin: 1.4rem 1.8rem 0.7rem;
-    }
-    &:first-child{
-      border-radius: 0.25rem 0.25rem 0 0;
-    }
-    &:last-child{
-      border-radius: 0 0 0.25rem 0.25rem ;
-    }
-    &:hover{
-      background-color: rgb(37,153,196);
-      color: #fff;
-      transform:scale(1.1) translate(0.3rem,0) ;
-      -webkit-transform: scale(1.1) translate(0.3rem,0);
-      -moz-transform: scale(1.1) translate(0.3rem,0) ;
-      border-radius: 0.25rem;
-      z-index:10;
-      font-size: @Nfont-size*1.1;
-    }
-  }
-}
-/* 链接浮窗css(end) */
 
-/* 年级以及知识点选择css(start) */
-.choiceSet{
-  border: 1px dashed rgb(241,242,246);
-  padding: 0 @LRpadding;
-}
-@grey:rgb(102,102,102);
-.choiceSetting{
-  font-size: 1.2rem;
-  display: inline-block;
-  border-radius: 2px;
-  padding:0.4rem 0.8rem;
-  text-align: center;
-  cursor: pointer;
-}
-.choiceSelect{
-  background-color: rgb(59,175,218);
-  color: #ffffff;
-}
-.choiceTip{
-  color:@grey;
-  font-size: 1.2rem;
-  padding:1.2rem 1.2rem 1.2rem 0;
-  text-align: center;
-  width:6rem;
-};
-.choice{
-  background-color: rgb(255,255,255);
-  .choice-grade-border{
 
-  }
-  .choice-grade{
-    margin:0;
-    .choiceSet;
-    .choice-grade-tip{
-      .choiceTip
-    }
-    .choice-grade-cur{
-      padding-top: 1rem;
-      padding-bottom:1rem;
-      .choice-grade-name{
-        line-height: 1;
-        .choiceSetting;
-      }
-    }
-    .select-grade{
-      .choiceSelect;
-    }
-  }
 
-  .choice-subject{
-    .choiceSet;
-    .choice-subject-tip{
-      .choiceTip
-    }
-    .choice-subject-cur{
-      padding-top: 1rem;
-      padding-bottom: 1rem;  
-      .choice-subject-name{
-        line-height: 1;
-        .choiceSetting;
-      }
-      .select-subject{
-        .choiceSelect;
-      }
-    }
-  }
-  .choice-point{
-    .choiceSet;
-    .choice-point-tip{
-      .choiceTip;
-      letter-spacing: 0.3rem;
-    }
-    .choice-point-cur{
-      overflow: hidden;
-      height:3.0rem;
-      padding-right:0;
-      padding-top: 1rem;
-      padding-bottom: 1rem;
-      //line-height: 1.8;
-      .choice-point-name{
-        .choiceSetting;
-        line-height: 1;
-        margin-bottom: 0.2rem;
-      }
-    }
-    .choice-cur-show{
-      overflow:auto;
-      height:7.5rem;
-    }
-    .chocie-point-show{
-      padding: 0;
-      width:5rem;
-      a{
-        font-size: 1.2rem;
-        font-weight: normal;
-        display: inline-block;
-        margin:1.1rem 0 1.1rem 0;
-        padding:0.2rem 0.5rem;
-      }
-    }
 
-    .choice-point-link{
-      padding:0;
-      .chocie-point-show{
-        cursor: pointer;
-      }
-      .chocie-point-download{
-        cursor: pointer;
-        border-radius: 2px;
-        text-align: center;
-        font-size: 1.2rem;
-        color:#fff;
-        width:8.5rem;
-        margin:0.8rem 0 0.8rem 0.5rem;
-        padding:0.5rem 0.5rem;
-        background-color: rgb(59,175,218);
-      }
-    }
-
-  }
-}
-/* 年级以及知识点选择css(end) */
-
-/* 错题本头部css(start) */
-.errorQuestion-head{
-  background-color:rgb(59,175,218);
-  height: 8rem;
-  width: 100%;
-  line-height: 8rem;
-  .left-fade{
-    color:rgb(59,175,218);
-  }
-  .erq-head-min{
-    width: 22rem;
-    .erq-head{
-      width: 6.4rem;
-      height: 6.4rem;
-    }
-  }
-  .erq-info-up{
-    margin-top: 1.8rem;
-    margin-bottom: 0.1rem;
-    width: 18rem;
-    .erq-icon{
-      padding:0 0.3rem 0.1rem;
-      display: inline-block;
-      width: 2.2rem;
-      height: 1.6rem;
-      background: url("img/v1.png") no-repeat 0 0.1rem;
-    }
-    .erq-dis{
-      color:rgb(37,153,196);
-      font-size:1.3rem;
-    }
-    .erq-usePage{
-      color:#fff;
-    }
-    .erq-useName{
-      display: inline-block;
-      font-size: 1.8rem;
-      color: #fff;
-    }
-  }
-  .erq-info-below{
-    .erq-sex{
-      display: inline-block;
-      width: 2rem;
-      height: 2rem;
-      border-radius: 50%;
-      background: url("img/sex-woman.png") no-repeat rgb(37,153,196) 45% 45%;
-    }
-    .erq-level{
-      .erq-level-left{
-        margin-top: 0.2rem;
-        margin-left: 0.8rem;
-        display: inline-block;
-        width:1.5rem;
-        height:1.8rem;
-        border-radius: 100% 0 0 100%;
-        background-color: rgb(255,188,60);
-      }
-      .erq-level-right{
-        margin-top: 0.2rem;
-        display: inline-block;
-        width:1.5rem;
-        height:1.8rem;
-        border-radius: 0 100% 100% 0;
-        background-color: rgb(255,188,60);
-      }
-      .erq-level-word{
-        margin-top: 0.2rem;
-        font-size: 1rem;
-        font-style: italic;
-        display: inline-block;
-        width:2.5rem;
-        height: 1.8rem;
-        line-height: 1.8rem;
-        color:#fff;
-        background-color: rgb(255,188,60);
-        text-align: center;
-      }
-
-    }
-  }
-
-  .erq-head-prize{
-    min-width:16rem;
-    .erq-prize{
-      margin: 2.5rem 0 0 1rem;
-      width: 3rem;
-      height: 3rem;
-    }
-  }
-
-}
