--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -52,6 +52,7 @@
             }
             .hpr-btn{
                 margin-left: 15px;
+                bottom: 150px;
             }
         }
         .hp-local{
