修改金币、找老师、直播样式

--- a/source/widget/Mall.FindTeacher/find-teacher.less
+++ b/source/widget/Mall.FindTeacher/find-teacher.less
@@ -43,4 +43,4 @@
 .findRightList{margin-bottom: 20px;}
 .findRightTitle{font-size: 16px;color: #666;display: inline-block;margin-bottom: 10px;}
 .find-teacher-list{overflow: hidden;border: 1px solid #eaeaea;margin-top: -1px;}
-.row{margin: 0;}
+//.row{margin: 0;}
