--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -19,7 +19,14 @@
 .live-time-tip-container{text-align: center;line-height: 30px;}
 .live-time-tip-container span{font-size: 16px;margin-right: 26px;}
 .live-time-tip-container img{margin-right: 9px;}
-.live-time-tip-container p{display: inline-block;font-size: 12px;color: #666;margin: 0;}
+.live-time-tip-container p{
+    display: inline-block;font-size: 12px;color: #666;margin: 0;
+    .fa {
+        margin-right: 5px;
+        color: #ddd;
+        font-size: 16px;
+    }
+}
 .live-enter{width: 150px;height: 36px;display: inline-block;background-color: #e74c3c;color: #fff;font-size: 14px;text-align: center;line-height: 36px;border-radius: 1px;cursor: pointer;}
 .live-enter-box{width: 245px;height: 50px;text-align: center;line-height: 50px;}
 .live-blue{background-color: #3bafda}
