--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -100,6 +100,8 @@ em {
     padding-left: 0;
     padding-right: 0;
     &.wrap-mall {
+        padding-left: 5px;
+        padding-right: 5px;
         width: 940px !important;
     }
 }
