--- a/source/widget/UM.mobile.phone/mobile.phone.less
+++ b/source/widget/UM.mobile.phone/mobile.phone.less
@@ -123,7 +123,7 @@
             font-size: 14px; 
         }
     }
-    #form_submit{
+    #mpform_submit{
         width: 100px;
         height: 35px;
         margin: 0px 30px 0 75px;
