--- a/source/widget/UM.third.bind/third.bind.less
+++ b/source/widget/UM.third.bind/third.bind.less
@@ -84,4 +84,36 @@
             }
         }
     }
+    .prompt-box{
+        margin: 0 auto;
+        clear: both;
+        img.prompt{
+            position: relative;
+            width: 75px;
+            height: 55px;
+            top: 6px;
+            left: 7px;
+        }
+        .cb-prompt-box{
+            height: 80px;
+            background: #fff8eb;
+            border-radius: 5px;
+            padding: 10px 0 0 20px;
+            h3{
+                font-size: 14px;
+                font-family: "Microsoft YaHei";
+                color: #666;
+                margin: 6px 0 6px 5px;
+            }
+            p{
+                margin: 0 0 0 5px;
+                strong{
+                    font-family: "Microsoft YaHei";
+                    font-size: 16px;
+                    font-weight: normal;
+                    color: #e74c3c;
+                }
+            }
+        } 
+    }
 }
