课程列表样式更改

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -725,9 +725,13 @@ ul,li{list-style: none;}
 	}
 	li.popular-rank {
 		border-right: 1px solid #eaeaea;
-		color: #1e89e0;
 		padding: 0 20px;
-		background: #fff;
+	}
+	li.active{
+		a{
+			color: #3bafda;
+			background: #fff;
+		}
 	}
 	.Onlylive-select {
 		color: #999999;
