--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -44,7 +44,8 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-store-card-exchange,.gold-store-present-exchange{width: 100px;height: 34px;background-color: #e74c3c;margin: 28px auto;text-align: center;font-size: 14px;line-height: 34px;color: #fff;border-radius: 3px;cursor: pointer;}
 .gold-store-present-rank,.gold-exchange-rank{width: 905px;height: 52px;margin-top: 10px;margin-left: 5px;font-size: 14px;background-color: #fff;border-radius: 5px;overflow: hidden;}
 .gold-store-present-rank-by,.gold-exchange-rank-by{line-height: 52px;margin-left: 22px;color: #999;cursor: pointer;}
-.gold-store-present-rank-by em{color:#3bafda;}
+.gold-store-present-rank-by em:hover{color:#3bafda;}
+.gold-store-present-rank-by .glyphicon{top: 2px;}
 .gold-store-present-rank-new{margin-left: 20px;}
 .gold-store-present-card-container{overflow: hidden;width: 934px;margin-top: 10px;}
 .gold-exchange-present-card-container{overflow: hidden;width: 934px;}
