--- a/source/widget/Mall.FindTeacher/find-teacher.less
+++ b/source/widget/Mall.FindTeacher/find-teacher.less
@@ -9,7 +9,9 @@
 .body{padding: 0;margin: 0;}
 .find-teacher-container{width: @width;border: @borderea;}
 .find-teacher-rank-title{width: @width;height: 38px;font-size: @fs12;border: @borderea;background-color: #fcfcfc;}
-.find-teacher-rank-title div{float: left;width: 65px;height: 36px;color: #1e89e0;text-align: center;padding-top: @pt;margin-right: 3px;border-right: @borderea;background-color: #fff;}
+.find-teacher-rank-focus{color: #1e89e0;}
+.find-teacher-rank-title .glyphicon{top: 2px;}
+.find-teacher-rank-title div{float: left;width: 65px;height: 36px;background-color: #fff;text-align: center;padding-top: @pt;margin-right: 3px;border-right: @borderea;}
 .find-teacher-rank-title span{padding-left: 27px;padding-top: @pt;display: inline-block;}
 .find-teacher-rank-title span img{margin-left: 5px;}
 .find-teacher-intro{line-height: 0;font-size: 0;}
