--- a/source/widget/UserHome.gold/gold.css
+++ b/source/widget/UserHome.gold/gold.css
@@ -284,8 +284,11 @@ table tr td {
   color: #999;
   cursor: pointer;
 }
-.gold-store-present-rank-by em {
+.gold-store-present-rank-by em:hover {
   color: #3bafda;
+}
+.gold-store-present-rank-by .glyphicon {
+  top: 2px;
 }
 .gold-store-present-rank-new {
   margin-left: 20px;
