--- a/source/widget/UM.third.bind/third.bind.less
+++ b/source/widget/UM.third.bind/third.bind.less
@@ -95,7 +95,6 @@
             left: 7px;
         }
         .cb-prompt-box{
-            height: 80px;
             background: #fff8eb;
             border-radius: 5px;
             padding: 10px 0 0 20px;
@@ -106,13 +105,9 @@
                 margin: 6px 0 6px 5px;
             }
             p{
-                margin: 0 0 0 5px;
-                strong{
-                    font-family: "Microsoft YaHei";
-                    font-size: 16px;
-                    font-weight: normal;
-                    color: #e74c3c;
-                }
+                padding: 0 10px 10px 5px;
+                font-size: 12px;
+                line-height: 23px;
             }
         } 
     }
