--- a/source/widget/Mall.FindTeacher/find-teacher.css
+++ b/source/widget/Mall.FindTeacher/find-teacher.css
@@ -13,7 +13,7 @@
   border: 1px solid #eaeaea;
   background-color: #fcfcfc;
 }
-.find-teacher-rank-focus a:hover {
+.find-teacher-rank-focus {
   color: #1e89e0;
 }
 .find-teacher-rank-title .glyphicon {
