--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -819,6 +819,16 @@ ul,li{list-style: none;}
 			margin: 0 5px;
 			padding: 0 10px;
 		}
+		a {
+			border: 1px solid #cfcfcf;
+			border-radius: 0;
+			color: #333333;
+			display: inline-block;
+			height: 25px;
+			line-height: 25px;
+			margin: 0 5px;
+			padding: 0 10px;
+		}
 	}
 	li.pages_current {
 		color: #ffffff;
