课程列表样式更改

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -757,8 +757,12 @@ ul,li{list-style: none;}
 	font-size: 12px;
 	color: #999999;
 	font-family: "SimSun";
-	span{
-		color: #e74c3c;
+	p{
+		font-size: 12px;
+		line-height: 42px;	
+		span{
+			color: #e74c3c;
+		}
 	}
 
 }
