--- a/source/widget/UM.head.photo/head.photo.css
+++ b/source/widget/UM.head.photo/head.photo.css
@@ -32,7 +32,7 @@
 .hp-content .hp-box-left .hp-recommend .hpr-box {
   width: 540px;
   height: 280px;
-  overflow: scroll;
+  overflow: auto;
   overflow-x: hidden;
   margin-bottom: 35px;
 }
@@ -51,10 +51,24 @@
 }
 .hp-content .hp-box-left .hp-recommend .hpr-btn {
   margin-left: 15px;
+  bottom: 150px;
 }
 .hp-content .hp-box-left .hp-local {
   display: none;
+  position: relative;
   margin-left: 60px;
+}
+.hp-content .hp-box-left .hp-local .message-error {
+  display: none;
+  position: absolute;
+  bottom: -35px;
+  width: 325px;
+}
+.hp-content .hp-box-left .hp-local .message-error span {
+  display: inline-block;
+  padding: 6px 0 6px 30px;
+  color: #e74c3c;
+  background: url("img/warning.png") 5px 4px no-repeat;
 }
 .hp-content .hp-box-left .hp-local .hl-box {
   position: relative;
@@ -66,8 +80,8 @@
 .hp-content .hp-box-left .hp-local .hl-box #preview {
   display: table-cell !important;
   display: block;
-  width: 299px;
-  height: 299px;
+  width: 400px;
+  height: 340px;
   overflow: hidden;
   text-align: center;
   position: static !important;
@@ -106,16 +120,17 @@
   left: 125px;
   font-size: 16px;
 }
-.hp-content .hp-box-left .hp-local .hl-box #loadFile {
-  display: inline-block;
+.hp-content .hp-box-left .hp-local .hl-box .btn_up .btn-change {
   position: absolute;
-  top: 150px;
-  left: 125px;
-  width: 150px;
-  height: 42px;
-  cursor: pointer;
-  opacity: 0;
-  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+  top: 360px;
+  left: 300px;
+  fontSize: 14px;
+  width: 100px;
+  height: 35px;
+}
+.hp-content .hp-box-left .hp-local .hl-box #loadFile {
+  position: absolute;
+  visibility: hidden;
 }
 .hp-content .hp-box-left .hp-local .hl-box em {
   position: absolute;
@@ -135,20 +150,13 @@
   font-size: 12px;
   color: #666;
 }
-.hp-content .hp-box-left .hp-local #loadFile {
-  display: none;
-  float: right;
-  position: relative;
-  left: 98px;
-  width: 98px;
-  height: 35px;
-  cursor: pointer;
-  opacity: 0;
-  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
-}
 .hp-content .hp-box-left .btn-info {
   width: 100px;
   font-size: 14px;
+}
+.hp-content .hp-box-left .hpl-btn {
+  position: absolute;
+  bottom: -70px;
 }
 .hp-content .hp-box-right {
   float: right;
