--- a/source/widget/Public.Selector/selector.less
+++ b/source/widget/Public.Selector/selector.less
@@ -1,11 +1,22 @@
 @charset "UTF-8";
 
-
 @Nfont-size:1.4rem;
 @Sfont-size:1rem;
 @LRpadding:0.8rem;
 
 
+//p{
+//  font-size: @Nfont-size;
+//  line-height: 1;
+//  text-rendering: optimizeLegibility; 
+//}
+//div{
+//  padding:0;
+//  margin:0;
+//}
+.columns{
+  padding:0;
+}
 
 /* 年级以及知识点选择css(start) */
 .choiceSet{
@@ -24,7 +35,7 @@
 }
 .choiceTip{
   color:@grey;
-  font-size: 1.2rem;
+//  font-size: 1.2rem;
   padding:1.2rem 1.2rem 1.2rem 0;
   text-align: center;
   width:6rem;
@@ -72,9 +83,6 @@
     margin-bottom: 1rem;
     position: relative;
     left:45%;
-  }
-  .choice-grade-border{
-
   }
   .choice-grade{
     margin:0;
@@ -143,8 +151,10 @@
       padding-right:0;
       padding-top: 1rem;
       padding-bottom: 1rem;
+
       //line-height: 1.8;
       .choice-item{
+      .choice-point-name{
         .choiceSetting;
         line-height: 1;
         margin-bottom: 0.2rem;
@@ -187,4 +197,58 @@
   }
 }
 /* 年级以及知识点选择css(end) */
+
+/* 年级以及知识点选择css重构(start) */
+.choice{//最外层
+    .choice-dl{//每一横条
+        .choiceSet;
+        line-height: 1;
+        .choice-title{//左侧标题
+            .choiceTip;
+        }
+        .choice-items{//右侧选项
+            height:3.0rem;
+            padding-top: 1rem;
+            padding-bottom: 1rem;
+            .choice-item-each{//单个选项
+                line-height: 1;
+                .choiceSetting;
+            }
+        }
+        .choice-more{//更多知识点
+            .choice-more-download{
+                cursor: pointer;
+                padding: 0;
+                width:9rem;
+                a{
+                    font-weight: normal;
+                    display: inline-block;
+                    margin:1.1rem 0 1.1rem 0;
+                    padding:0.2rem 0.5rem;
+                }    
+            }
+            
+        }
+    }
+    .choice-special{//知识点选择（特殊情况加类名）
+        .choice-title{//三个字，加文字间距
+            letter-spacing: 0.3rem;
+        }
+        .choice-items-spe{
+            overflow: hidden;
+            height:2rem;
+            margin-top: 1rem;
+            margin-bottom: 1rem;
+            .choice-item-each{
+                line-height: 1;
+                margin-bottom: 1rem;
+                .choiceSetting;
+            }
+        }
+        .choice-items-open{
+            overflow: auto;
+            height: 8rem;
+        }
+    }
+}
 
