--- a/source/widget/UserHome.notice/notice.less
+++ b/source/widget/UserHome.notice/notice.less
@@ -72,6 +72,7 @@
             }
         }
         .nm-paging{
-            min-height: 60px;
+            min-height: 40px;
+            border-bottom: none;
         }
 }
