--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -377,10 +377,15 @@ ul,li{list-style: none;}
 		display: inline;
 		.avatar-photo{
 			width: 40px;
-			img{
-				width: 40px;
-				height: 40px;
-				border-radius: 50%;
+			ul{
+				li{
+					width: 40px;
+					img{
+						width: 40px;
+						height: 40px;
+						border-radius: 50%;
+					}
+				}
 			}
 		}
 	}
