--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -74,6 +74,11 @@ body{
 .popover.top > .arrow{
 	border-top-color: #e5e5e5;
 }
+.wrap-body{
+	a,a:focus,a.btn:focus,a.btn:active{
+		outline: none;
+	}
+}
 .courseList-wrap{
 	clear: both;
 	overflow: hidden;
@@ -288,7 +293,6 @@ body{
 					}
 				}
 				p.teacher-coach{
-					color: #3bafda;
 					font-size: 14px;
 					font-family: "Microsoft YaHei";
 				}
