Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -377,6 +377,11 @@ ul,li{list-style: none;}
 		display: inline;
 		.avatar-photo{
 			width: 40px;
+			ul{
+				li{
+					width: 40px;
+				}
+			}
 			img{
 				width: 40px;
 				height: 40px;
