--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -32,7 +32,7 @@
         .hp-recommend{
             .hpr-box{
                 width: 540px;
-                height: 280px;
+                height: 288px;
                 overflow:auto;
                 overflow-x:hidden;
                 margin-bottom: 35px;
@@ -48,6 +48,12 @@
                         -moz-box-shadow:0px 0px 10px #3bafda;     
                         -webkit-box-shadow:0px 0px 10px #3bafda;   
                     }
+                }
+                .imghover{
+                    border: 3px solid #3bafda;
+                    box-shadow:0px 0px 10px #3bafda; 
+                    -moz-box-shadow:0px 0px 10px #3bafda;     
+                    -webkit-box-shadow:0px 0px 10px #3bafda;  
                 }
             }
             .hpr-btn{
@@ -123,7 +129,7 @@
                     }
                     .btn-change{
                         position: absolute;
-                        top: 360px;
+                        top: 375px;
                         left: 300px;
                         fontSize: 14px;
                         width: 100px;
