--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -74,6 +74,11 @@ body{
 .popover.top > .arrow{
 	border-top-color: #e5e5e5;
 }
+.wrap-body{
+	a,a:focus,a.btn:focus,a.btn:active{
+		outline: none;
+	}
+}
 .courseList-wrap{
 	clear: both;
 	overflow: hidden;
@@ -154,6 +159,9 @@ body{
 			line-height: 18px;
 			margin-bottom: 8px;
 			font-family: 'Microsoft YaHei';
+			span{
+				color: #999;
+			}
 			.course_estimate{
 				color: @dark333;
 				font-size: 12px;
@@ -170,6 +178,7 @@ body{
 		}
 		.title-more{
 			margin-top: 38px;
+			font-size: 14px;
 		}
 		.end-time{
 			color: #666;
@@ -284,7 +293,6 @@ body{
 					}
 				}
 				p.teacher-coach{
-					color: #3bafda;
 					font-size: 14px;
 					font-family: "Microsoft YaHei";
 				}
@@ -532,6 +540,14 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 			}
 		}
 	}
+	.tab-record-content{
+		.tab-pane{
+			display: none;
+		}
+		.active{
+			display: block;
+		}
+	}
 	.course-table{
 		background: #fff;
 		td{
@@ -613,11 +629,21 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 		line-height: 30px;
 		padding: 0 15px;
 		cursor: pointer;
+		a{
+			outline: none;
+		}
 	}
 	li.current{
 		background: #3bafda;
 		color: #fff;
 		border-radius: 4px 4px 0 0;
+		a{
+			outline: none;
+			color: #fff;
+			&:hover{
+				color: #fff;
+			}
+		}
 	}
 }
 .amount-show{
@@ -635,4 +661,51 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 			}
 		}
 	}
+}
+.none-content{
+	float: left;
+	position: relative;
+	left: 50%;
+	.nc-center{
+		position: relative;
+		left: -50%;
+		img{
+			_float: left;
+			_margin-right: 240px;
+		}
+		p{
+			float: right;
+			_float: none;
+			_width: 120px;
+			margin: 30px 0 0 20px;
+			line-height: 35px;
+			font-family: "Microsoft YaHei";
+			font-size: 16px;
+			em{
+				font-style: normal;
+				color: #e74c3c;
+			}
+		}
+	}
+}
+// 进度条
+.processingbar {
+	text-align: center;
+	margin: 8px 28px 0 0;
+	position: relative;
+	width: 100px;
+}
+.processingbar font {
+	color: #999;
+	display: block;
+	width: 100px;
+	height: 100px;
+	line-height: 100px;
+	font-size: 22px;
+	text-align: center;
+	position: absolute;
+	font-weight: bold;
+	left: 0;
+	top: 0;
+	margin: 0px 0 0 0px;
 }
