Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/Public.Dynamic/fresh.less
+++ b/source/widget/Public.Dynamic/fresh.less
@@ -635,6 +635,9 @@
             .fresh-font-blue{
                 color: @blue-color;
             }
+            .f_blue{
+                color: @blue-color;
+            }
         }
         .fresh-comment-more{
             overflow:hidden;
