--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -46,25 +46,29 @@ body{
 	font-size: 12px;
 	font-style: normal;
 	cursor: pointer;
-	padding-top: 8px;
 	font-weight: normal;
 	padding: 0 2px;
 }
 .label-delay{
 	background: #3bafda;
-	top: 17px;
+	padding-top: 12px;
+	top: 9px;
 }
 .label-delayed{
 	background: #ccd1d9;
-	top: 17px;
+	top: 9px;
+	padding-top: 5px;
+	cursor: default;
 }
 .label-continun{
 	background: #37bc9b;
-	top: 78px;
+	top: 71px;
+	padding-top: 12px;
 }
 .label-sheng{
-	cursor: default;
-	top: 78px;
+	top: 132px;
+	padding-top: 12px;
+	background: #ffaa09;
 }
 .courseList-label{
 	padding-right: 25px;
