--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -260,11 +260,10 @@ body{
 				background: url("img/blue-arrow.png") no-repeat right center;
 			}
 			.more-list{
-				padding-top: 5px;
+				padding: 5px 8px;
 				border: 1px solid #f5f5f5;
 				background: #fcfcfc;
 				width: 62px;
-				height: 92px;
 				color: #333;
 				font-size: 12px;
 				line-height: 28px;
