--- a/source/widget/UM.password/password.less
+++ b/source/widget/UM.password/password.less
@@ -88,8 +88,18 @@
     }
     #form_submit{
         width: 120px;
-        height: 35px;
         margin: 0px 30px 0 75px;
-        font-size: 14px; 
+        font-size: 14px;
+        color: #fff;
+        background-color: #3bafda;
+        border-color: transparent;
+        &:focus{
+            outline: none;
+        }
+        &:hover{
+            color: #fff;
+            background-color: #2494be;
+            border-color: rgba(0,0,0,0);
+        }
     }
 }
