Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/UserHome.homework/homework.less
+++ b/source/widget/UserHome.homework/homework.less
@@ -666,8 +666,11 @@
    background:none;
    border:none;
    border-radius:0;
+   -webkit-border-radius:0;
+   -moz-border-radius:0;
    -webkit-box-shadow:none;
    box-shadow:none;
+   -moz-box-shadow:none;
 }
 /** 
  * 中等屏幕 桌面显示器 (<=1200px)
