学习中心更改

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -74,19 +74,22 @@ body{
 .courseList-label{
 	padding-right: 25px;
 }
-.popover{
-	background-color: #f9f9f9;
-	padding: 4px 3px;
-	font-size: 14px;
-	color: #666;
-	border-color: #e5e5e5;
-	box-shadow: none;
-}
-.popover.top > .arrow::after{
-	border-top-color: #f9f9f9;
-}
-.popover.top > .arrow{
-	border-top-color: #e5e5e5;
+.courselayout-list{
+	
+	.popover{
+		background-color: #f9f9f9;
+		padding: 4px 3px;
+		font-size: 14px;
+		color: #666;
+		border-color: #e5e5e5;
+		box-shadow: none;
+	}
+	.popover.top > .arrow::after{
+		border-top-color: #f9f9f9;
+	}
+	.popover.top > .arrow{
+		border-top-color: #e5e5e5;
+	}
 }
 .wrap-body{
 	a,a:focus,a.btn:focus,a.btn:active{
