--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -43,10 +43,12 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-store-card p{width: 200px;font-size: 12px;color: #333;margin: 12px auto;line-height: 18px;}
 .gold-store-card-exchange,.gold-store-present-exchange{width: 100px;height: 34px;background-color: #e74c3c;margin: 28px auto;text-align: center;font-size: 14px;line-height: 34px;color: #fff;border-radius: 3px;cursor: pointer;}
 .gold-store-present-rank,.gold-exchange-rank{width: 905px;height: 52px;margin-top: 10px;margin-left: 5px;font-size: 14px;background-color: #fff;border-radius: 5px;overflow: hidden;}
-.gold-store-present-rank-by,.gold-exchange-rank-by{line-height: 52px;margin-left: 22px;color: #999;cursor: pointer;}
-.gold-store-present-rank-by em:hover{color:#3bafda;}
+.gold-store-present-rank-by,.gold-exchange-rank-by{line-height: 52px;margin-left: 22px;color: #999;cursor: pointer;position: relative;}
+.gold-store-present-rank-by a:hover{color:#3bafda;}
 .gold-store-present-rank-by .glyphicon{top: 2px;}
-.gold-store-present-rank-new{margin-left: 20px;}
+.gold-store-present-rank-new{width: 52px;position: absolute;left: 100px;}
+.gold-store-new-arrow{position: absolute;left: 133px;}
+.gold-store-present-rank-focus{color: #3bafda;}
 .gold-store-present-card-container{overflow: hidden;width: 934px;margin-top: 10px;}
 .gold-exchange-present-card-container{overflow: hidden;width: 934px;}
 .gold-store-present-card-center{text-align: center;font-size: 14px;}
