--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -90,8 +90,8 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .present-address-box form label{height: 32px;line-height: 32px;color: #999;display: block;}
 .present-address-box form label input{margin: 0 11px 0 3px;}
 .present-address-box form label.present-address-focus{background-color: #ebf7fb;color: #333;}
-.modal-title{color:#666;}
-.modal-body{overflow: hidden;}
+#presentModal .modal-title，#cardModal .modal-title{color:#666;}
+#presentModal .modal-body,#cardModal .modal-body{overflow: hidden;}
 .red-card-tip div,.present-card-tip div{padding:0;height: 30px;text-align: center;}
 .red-card-tip div span,.present-card-tip div span{height: 30px;line-height: 30px;color: #333;font-weight: bold;}
 .alertImg{margin-right: 10px;margin-bottom: 3px;}
