button更改去除火狐边框

--- a/source/widget/UM.all.order/all.order.less
+++ b/source/widget/UM.all.order/all.order.less
@@ -140,14 +140,13 @@
                         span{
                             display: inline-block;
                             width: 50px;
-                            margin: 0 25px;
                             a{
                                 font-size: 12px;
                                 font-family: "SimSun";
                                 color: #333;
                             }
                         }
-                        button{
+                        .btn{
                            width: 100px;
                            margin-bottom: 12px;
                            font-family: "simsun";
