--- a/source/widget/UM.card.learn/card.learn.less
+++ b/source/widget/UM.card.learn/card.learn.less
@@ -151,6 +151,7 @@
                     margin: 25px 0 0 70px;
                     padding: 6px 28px;
                     font-size: 14px;
+                    color: #fff;
                 }
             }
             .prompt-box{
