--- a/source/widget/UM.third.bind/third.bind.less
+++ b/source/widget/UM.third.bind/third.bind.less
@@ -24,12 +24,6 @@
                 color: #333;
                 background: url("img/app-logo.png") no-repeat;
             }
-            .btn-info{
-                float: right;               
-                width: 100px;
-                margin: 13px 20px 0 0;
-                font-size: 14px; 
-            }
             span{
                 float: left;
                 width: 15%;
@@ -41,6 +35,12 @@
             span{
                 font-size: 14px;
                 color: #e74c3c;
+            }
+            .btn-info{
+                float: right;               
+                width: 100px;
+                margin: 13px 20px 0 0; 
+                color: #fff;
             }
         }
         .bounded{
