--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -75,7 +75,7 @@ body{
 	padding-right: 25px;
 }
 .courselayout-list{
-	
+
 	.popover{
 		background-color: #f9f9f9;
 		padding: 4px 3px;
@@ -606,6 +606,8 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 				}
 			}
 		}
+		tbody{
+
 		tr{
 			font-size: 14px;
 			font-family: "SimSun";
@@ -619,6 +621,9 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 					color: #ffbc3c;
 					cursor: pointer;
 				}
+			}
+			td{
+				border-top: none;
 			}
 			.studied-end{
 				color: @red;
@@ -651,6 +656,7 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 
 				}
 			}
+		}
 		}
 	}
 }
