商城二级页面更改

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -692,7 +692,7 @@ ul,li{list-style: none;}
 }
 // 课程筛选页右边广告位
 .sideright-body{
-	padding: 0;
+	margin-top: 20px;
 	.sideright-ad{
 		margin-bottom: 20px;
 		img{
@@ -722,10 +722,12 @@ ul,li{list-style: none;}
 		float: left;
 		font-size: 12px;
 		list-style: outside none none;
-		padding: 0 10px;
-
-		img{
-			margin-left: 5px;
+		padding: 0 0px 0 27px;
+		a{
+			i{
+				color: #a1a2a1;
+				margin-left: 5px;
+			}
 		}
 	}
 	li.popular-rank {
@@ -752,6 +754,9 @@ ul,li{list-style: none;}
 			float: left;
 			font-weight: normal;
 		}
+	}
+	.screen-look-grades{
+		margin-right: 15px;
 	}
 }
 
