学习中心首页

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -607,7 +607,7 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 			}
 		}
 		tbody{
-			
+
 			tr{
 				font-size: 14px;
 				font-family: "SimSun";
@@ -736,7 +736,7 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 // 进度条
 .processingbar {
 	text-align: center;
-	margin: 8px 28px 0 0;
+	margin: 3px 0 0 20px;
 	position: relative;
 	width: 100px;
 }
