老师头像页卡

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -77,11 +77,20 @@ ul,li{list-style: none;}
 		span.ui-user-name{
 			font-size: 14px;
 		}
+		.ui-userinfo{
+			.userpic{
+				display: block;
+				width: 60px;
+				height: 60px;
+			}
+		}
 		.avatar-photo{
 			margin-bottom: 4px;
 			display: inline-block;
 			width: 60px;
 			overflow: hidden;
+			padding-left: 0;
+			margin-top: 0;
 			img{
 				border-radius: 50%;
 				width: 60px;
@@ -382,6 +391,13 @@ ul,li{list-style: none;}
 					width: 40px;
 				}
 			}
+			.ui-userinfo{
+				.userpic{
+					display: block;
+					width: 40px;
+					height: 40px;
+				}
+			}
 			img{
 				width: 40px;
 				height: 40px;
@@ -524,7 +540,8 @@ ul,li{list-style: none;}
 .teacher-bomb {
 	height: 266px;
 	width: 375px;
-	border-top: none;
+	border: none;
+	padding: 0;
 	ul{
 		padding-left: 0;
 	}
@@ -600,6 +617,7 @@ ul,li{list-style: none;}
 				font-size: 14px;
 				text-align: center;
 				padding: 0 5px;
+				margin-top: 0;
 				span{
 					margin-left: 25px;
 				}
