--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -30,6 +30,7 @@
         clear: both;
         margin-left: 110px;
         .hp-recommend{
+            display:none;
             .hpr-box{
                 width: 540px;
                 height: 288px;
@@ -159,6 +160,9 @@
                     color: #666;
                 }
             }
+        }
+        .active{
+            display:block;
         }
         .btn-info{
             width: 100px;
